--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.7",
+    "@expo/webpack-config": "^18.0.1",
+    "expo": "^48.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-svg": "13.9.0"
+    "react-native-reanimated": "~2.14.4",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
   },
   "private": true
